# wolbot-rs

./: Cargo.toml  README.md  config.json.sample
.github/workflows/: build.yml
src/: commands.rs  config.rs  handler.rs  main.rs
src/commands/: help.rs  wol.rs
