[package]
name = "wolbot"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"

serenity = {version = "0.12.0", features = ["framework", "standard_framework"]}

tokio = {version = "1.28.2", features = ["macros", "rt-multi-thread"]}

wakey = {version = "0.3.0"}
